更改DVI输出的时钟，这个bug居然从最开始到现在才被发现:ambulance:

--- a/impl/gwsynthesis/gowin_empu_m3_syn_resource.html
+++ b/impl/gwsynthesis/gowin_empu_m3_syn_resource.html
@@ -29,7 +29,43 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">dual_ov5640_lcd (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
+<td class="label">Cortex_M3_DualCam (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/Cortex_M3_DualCam.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--Cortex_M3
+ (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/Cortex_M3_DualCam.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_Gowin_rPLL
+ (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/gowin_empu_m3_template.v)</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+<td align = "center">-</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_Gowin_EMPU_M3_Top
+ (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/gowin_empu_m3_template.v)</td>
+<td align = "center">5461</td>
+<td align = "center">1375</td>
+<td align = "center">23150</td>
+<td align = "center">1</td>
+<td align = "center">64</td>
+<td align = "center">12</td>
+</tr>
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--graphics_processing_unit
+ (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/Cortex_M3_DualCam.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">3</td>
@@ -37,7 +73,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--u_cmos_rpll
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_cmos_rpll
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -46,7 +82,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--u0_ov5640_dri
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u0_ov5640_dri
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -55,7 +91,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_cfg
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_cfg
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">23</td>
 <td align = "center">19</td>
@@ -64,16 +100,16 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">1</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_dr
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_dr
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">32</td>
 <td align = "center">-</td>
-<td align = "center">110</td>
+<td align = "center">109</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_cmos_capture_data
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_cmos_capture_data
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">34</td>
 <td align = "center">-</td>
@@ -82,7 +118,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--u1_ov5640_dri
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u1_ov5640_dri
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -91,7 +127,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_cfg
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_cfg
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">23</td>
 <td align = "center">19</td>
@@ -100,25 +136,25 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">1</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_dr
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_i2c_dr
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">31</td>
 <td align = "center">-</td>
-<td align = "center">114</td>
+<td align = "center">110</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_cmos_capture_data
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_cmos_capture_data
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/ov5640/ov5640_dri.v)</td>
 <td align = "center">34</td>
 <td align = "center">-</td>
-<td align = "center">34</td>
+<td align = "center">31</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--u_cmos_add
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_cmos_add
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">14</td>
 <td align = "center">13</td>
@@ -127,7 +163,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_fifo_pong
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_fifo_pong
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/cmos_add.v)</td>
 <td align = "center">89</td>
 <td align = "center">32</td>
@@ -136,7 +172,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">259</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_fifo_splicing
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_fifo_splicing
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/cmos_add.v)</td>
 <td align = "center">89</td>
 <td align = "center">32</td>
@@ -145,7 +181,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">259</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--Video_Frame_Buffer
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--Video_Frame_Buffer
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">399</td>
 <td align = "center">82</td>
@@ -154,7 +190,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">8</td>
 <td align = "center">6</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--pll_ddr3
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--pll_ddr3
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -163,16 +199,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--gw_gao_inst_0
- (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/impl/gwsynthesis/RTL_GAO/gw_gao_top.v)</td>
-<td align = "center">311</td>
-<td align = "center">-</td>
-<td align = "center">274</td>
-<td align = "center">-</td>
-<td align = "center">32</td>
-<td align = "center">-</td>
-</tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--DDR3_MIG
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--DDR3_MIG
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">1292</td>
 <td align = "center">112</td>
@@ -181,7 +208,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">8</td>
 <td align = "center">111</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--syn_gen_inst
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--syn_gen_inst
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">33</td>
 <td align = "center">-</td>
@@ -190,7 +217,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--u_tmds_pll
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_tmds_pll
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -199,7 +226,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--u_Gowin_CLKDIV
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--u_Gowin_CLKDIV
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -208,7 +235,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--DVI_TX
+<td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--DVI_TX
  (C:/Users/hankg/OneDrive/Works/Gowin/Cortex-M3-DualCam/src/dual_ov5640_lcd.v)</td>
 <td align = "center">73</td>
 <td align = "center">68</td>
